--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
     <div id="app"></div>
     <script>
       window.$docsify = {
-        name: '',
+        name: 'iDevia Dev Docs',
         repo: '',
-        loadSidebar: true
+        loadSidebar: true,
+        subMaxLevel: 2,
+        auto2top: true
       }
     </script>
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
   </body>
 </html>
