--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>Dev docs for iDevia</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description" />
     <meta
@@ -10,19 +10,30 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
+    <nav>
+      <a href="#!">Dark</a>
+    </nav>
     <div id="app"></div>
     <script>
       window.$docsify = {
-        name: 'iDevia Dev Docs',
+        name: 'The dev guide',
         repo: '',
         loadSidebar: true,
         subMaxLevel: 2,
-        auto2top: true
+        auto2top: true,
+        search: {
+          paths: 'auto',
+          placeholder: 'Search',
+          noData: 'No Results.'
+        }
+        // logo: './logo.svg'
       }
     </script>
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
   </body>
 </html>
