update nodejs structure for graphql

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           paths: 'auto',
           placeholder: 'Search',
           noData: 'No Results.'
-        }
-        // logo: './logo.svg'
+        },
+        logo: './assets/logo.svg'
       }
     </script>
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
